# solocoder-5546-rust-search

./: .gitignore  Cargo.toml  NEXT_PROMPT_R2.txt  config.json  snippet_test.json
docs/: test1.md  test2.md  test3.md
index_data/: .managed.json  meta.json
sdk/node/: search_client.js
sdk/python/: search_client.py
src/: config.rs  lib.rs  main.rs
src/api/: commit.rs  connector_api.rs  mod.rs  search.rs
src/connector/: confluence.rs  local_markdown.rs  maildir.rs  mod.rs  notion.rs  slack.rs
src/engine/: analyzer.rs  highlight.rs  index_manager.rs  mod.rs  query_parser.rs
src/scheduler/: mod.rs
src/schema/: document.rs
