[package]
name = "unified-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "unified_search"
path = "src/lib.rs"

[[bin]]
name = "unified-search"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tantivy = "0.22"
jieba-rs = "0.7"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
async-trait = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
